Modificada a responsividade das side pages, calculadora e do footer, erros removidos

--- a/exercicios/treino-de-abdomen.html
+++ b/exercicios/treino-de-abdomen.html
@@ -177,10 +177,7 @@
         Além disso, para que o abdômen fique em forma mais rapidamente, ganhando massa muscular,
         pode-se tomar suplementos proteicos, no entanto é preciso que seja recomendado pelo
         nutricionista, pois é necessário verificar qual a necessidade proteica e as características
-        da pessoa, sendo possível indicar o mais adequado. Conheça
-        <a href="https://www.tuasaude.com/suplementos-para-ganhar-massa-muscular/"
-          >alguns suplementos para ganhar massa muscular.</a
-        >
+        da pessoa, sendo possível indicar o mais adequado. Conheça alguns suplementos para ganhar massa muscular.
       </p>
 
       <h3 class="title2">Dicas para definir os abdominais</h3>
@@ -195,7 +192,7 @@
       <p class="text1">
         Além disso, as artes marciais também são uma excelente opção para quem quer definir o
         abdômen, modelar o corpo e aumentar a resistência e força física. Conheça
-        <a href="https://www.tuasaude.com/artes-marciais/">mais sobre as artes marciais.</a>
+        mais sobre as artes marciais.
       </p>
       <p class="text1">
         Adotar uma boa postura também é muito importante para ficar sem barriga porque, quando a
