--- a/exercicios/treino-de-lombar.html
+++ b/exercicios/treino-de-lombar.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/6c32633a00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/reset.css" />
     <title>Alongamentos de lombar</title>
@@ -24,7 +25,8 @@
       </header>
     </div>
     <div class="texto">
-      <a href="../index.html">
+
+      <a class="fa-link"href="../index.html">
         <i class="fa-sharp fa-solid fa-rotate-left"></i>
       </a>
 
