--- a/exercicios/treino-de-peito.html
+++ b/exercicios/treino-de-peito.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="texto">
-      <a href="../index.html">
+      <a class="fa-link"href="../index.html">
         <i class="fa-sharp fa-solid fa-rotate-left"></i>
       </a>
       <h1 class="title1">Como Fazer Treino de Peito em Casa</h1>
