--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p id="classificacao">Peso normal</p>
             </div>
             <div class="painel-input">
-              <div>
+              <div class="div-input">
                 <input
                   type="range"
                   min="100"
@@ -63,7 +63,7 @@
                 <br /><br />
                 <span id="altura-valor">100 cm</span>
               </div>
-              <div class="">
+              <div class="div-input">
                 <input type="range" min="20" max="200" value="20" id="peso" oninput="calcular()" />
                 <br /><br />
                 <span id="peso-valor">20 kg</span>
