Adicionado ActiveLink no Menu, melhorias e correçoes responsivo

--- a/exercicios/treino-de-abdomen.html
+++ b/exercicios/treino-de-abdomen.html
@@ -19,12 +19,7 @@
         <div class="logotipo">
           <h1 id="logo">Nutr<span id="ponto">.</span>IMC</h1>
         </div>
-        <div class="menu">
-          <a href="../index.html">Início</a>
-          <a href="#" onclick="alternarConteudo('form1', 'container-lista'); return false;"
-            >Calculadora IMC</a
-          >
-        </div>
+        <div class="menu"></div>
         <div class="container-toggle">
           <input type="checkbox" id="toggle" />
         </div>
@@ -33,7 +28,7 @@
 
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">6 Exercícios para Definir o Abdômen em Casa</h1>
@@ -62,8 +57,7 @@
       </p>
 
       <h4 class="subtitle">1. Abdominal em V</h4>
-      <img class="fotos"
-      src="../img/1.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/1.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para fazer esse abdominal, a pessoa deve deitar com a barriga para cima e levantar um pouco
         as pernas e o tronco, colocando os braços para frente, realizando esses dois movimentos ao
@@ -73,8 +67,7 @@
       </p>
 
       <h4 class="subtitle">2. Abdominal com perna elevada</h4>
-      <img class="fotos"
-      src="../img/2.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/2.webp" alt="Italian Trulli2" />
       <p class="text1">
         Nesse abdominal, a pessoa deve deitar no chão de barriga para cima, levantar as pernas
         esticadas ou semi flexionadas e o tronco, mantendo os braços para frente. Esse exercício é
@@ -84,8 +77,7 @@
       </p>
 
       <h4 class="subtitle">3. Abdominal cruzado</h4>
-      <img class="fotos"
-      rc="../img/3.webp" alt="Italian Trulli2" />
+      <img class="fotos" rc="../img/3.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para fazer esse abdominal, também conhecido como abdominal bicicleta, a pessoa deve se
         posicionar como se fosse fazer um abdominal normal, colocar as mãos atrás da nuca, tirar os
@@ -95,8 +87,7 @@
       </p>
 
       <h4 class="subtitle">4. Abdominal com elevação do quadril na bola</h4>
-      <img class="fotos"
-      src="../img/4.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/4.webp" alt="Italian Trulli2" />
       <p class="text1">
         O abdominal com elevação do quadril na bola também é um ótimo exercício, sendo necessário
         para isso deitar no chão, de barriga para cima, colocar a planta dos pés na boal de pilates
@@ -105,8 +96,7 @@
       </p>
 
       <h4 class="subtitle">5. Prancha com bola</h4>
-      <img class="fotos"
-       src="../img/5.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/5.webp" alt="Italian Trulli2" />
       <p class="text1">
         Neste exercício, deve-se colocar os pés na bola e apoiar os braços no chão, como se fosse
         fazer a prancha. Em seguida, deve-se dobrar os joelhos, puxando a bola para frente, sem
@@ -116,8 +106,7 @@
       </p>
 
       <h4 class="subtitle">6. Prancha com 2 apoios</h4>
-      <img class="fotos" 
-      src="../img/6.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/6.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para realizar esse exercício, é fundamental que os músculos abdominais estejam ativados para
         que se possa ter equilíbrio. Inicialmente, a pessoa deve ficar na posição de prancha e
@@ -177,7 +166,8 @@
         Além disso, para que o abdômen fique em forma mais rapidamente, ganhando massa muscular,
         pode-se tomar suplementos proteicos, no entanto é preciso que seja recomendado pelo
         nutricionista, pois é necessário verificar qual a necessidade proteica e as características
-        da pessoa, sendo possível indicar o mais adequado. Conheça alguns suplementos para ganhar massa muscular.
+        da pessoa, sendo possível indicar o mais adequado. Conheça alguns suplementos para ganhar
+        massa muscular.
       </p>
 
       <h3 class="title2">Dicas para definir os abdominais</h3>
@@ -191,8 +181,8 @@
       </p>
       <p class="text1">
         Além disso, as artes marciais também são uma excelente opção para quem quer definir o
-        abdômen, modelar o corpo e aumentar a resistência e força física. Conheça
-        mais sobre as artes marciais.
+        abdômen, modelar o corpo e aumentar a resistência e força física. Conheça mais sobre as
+        artes marciais.
       </p>
       <p class="text1">
         Adotar uma boa postura também é muito importante para ficar sem barriga porque, quando a
@@ -202,7 +192,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
