--- a/exercicios/treino-de-pernas.html
+++ b/exercicios/treino-de-pernas.html
@@ -26,7 +26,7 @@
     </div>
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">5 Exercícios para Treinar Perna em Casa</h1>
@@ -48,10 +48,7 @@
       </p>
 
       <h4 class="subtitle">1. Flexão plantar</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52133.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52133.webp" alt="aaaa" />
       <p class="text1">
         Esse exercício ajuda a fortalecer os músculos da panturrilha, além de melhorar o equilíbrio
         do corpo e prevenir lesões em treinos de corrida ou caminhada, por exemplo.
@@ -68,7 +65,8 @@
         garrafas pet com água ou areia, para intensificar o trabalho muscular.
       </p>
       <h4 class="subtitle">2. Elevação de perna</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         style="display: block"
         src="../img/treino-de-pernas-em-casa_52134_l.webp"
         alt="aaaa"
@@ -86,10 +84,7 @@
       </p>
 
       <h4 class="subtitle">3. Agachamento</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52135_l.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52135_l.webp" alt="aaaa" />
       <p class="text1">
         O agachamento é um exercício completo para as pernas pois trabalha glúteo, coxas,
         panturrilha, parte posterior das pernas e abdômen.
@@ -108,10 +103,7 @@
       </p>
 
       <h4 class="subtitle">4. Agachamento isométrico</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52136_l.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52136_l.webp" alt="aaaa" />
       <p class="text1"></p>
       <p class="text1">
         <b class="bold">Como fazer:</b>
@@ -131,10 +123,7 @@
       </p>
 
       <h4 class="subtitle">5. Agachamento búlgaro</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52137_l.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52137_l.webp" alt="aaaa" />
       <p class="text1">
         O agachamento búlgaro é um dos treinos mais eficientes para trabalhar as coxas e os glúteos,
         melhorando o fortalecimento e o alongamento muscular, além de tonificar as pernas.
@@ -162,10 +151,7 @@
         coxa e panturrilha. Para fazer esses alongamentos, não é necessário o uso de pesos.
       </p>
       <h4 class="subtitle">1. Alongamento da parte posterior da coxa</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52138_l.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52138_l.webp" alt="aaaa" />
       <p class="text1">
         O alongamento da parte posterior da coxa pode ser feito sentado no chão, permitindo alongar
         os músculos posteriores da coxa, o glúteo, a panturrilha e a planta do pé.
@@ -177,20 +163,16 @@
         puxá-lo em direção ao corpo, segurando por 20 a 30 segundos. Repetir com a outra perna.
       </p>
       <h4 class="subtitle">2. Alongamento da parte anterior da coxa</h4>
-      <img class="fotos"
-        src="../img/treino-de-pernas-em-casa_52139_l.webp"
-        alt="aaaa"
-      />
+      <img class="fotos" src="../img/treino-de-pernas-em-casa_52139_l.webp" alt="aaaa" />
       <p class="text1">
         <b class="bold">Como fazer:</b>
         apoiar-se em uma perna e dobrar a outra para trás, segurando-a com as mãos por 30 a 60
         segundos. Repetir com a outra perna.
       </p>
     </div>
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
-
     <script src="../js/main.js"></script>
   </body>
 </html>
