--- a/exercicios/treino-de-biceps.html
+++ b/exercicios/treino-de-biceps.html
@@ -26,7 +26,7 @@
     </div>
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">6 Exercícios para Treino de Bíceps em Casa</h1>
@@ -58,10 +58,7 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de bíceps em casa são:</p>
 
       <h4 class="subtitle">1. Flexão de braço</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52299.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52299.webp" alt="Italian Trulli2" />
       <p class="text1">
         Embora seja muito utilizada no treino de peito, a flexão de braços trabalha vários grupos
         musculares, incluindo os bíceps, o que permite ganhar massa e enrijecer os bíceps,
@@ -78,10 +75,7 @@
       </p>
 
       <h4 class="subtitle">2. Flexão de braço inclinada</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52300_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52300_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         A flexão de braço inclinada é outra variante da flexão que ajuda a trabalhar a força e a
         resistência dos bíceps, tríceps e deltóides. Além disso, ajuda a fortalecer o abdômen e as
@@ -98,10 +92,7 @@
       </p>
 
       <h4 class="subtitle">3. Rosca martelo</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52301_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52301_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         O exercício “rosca martelo” é bastante eficaz para aumentar o volume dos bíceps e do músculo
         braquial, mas deve ser feita com o uso de peso ou halteres., Caso não se tenha este tipo de
@@ -120,10 +111,7 @@
       </p>
 
       <h4 class="subtitle">4. Rosca direta</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52302_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52302_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         O exercício “rosca direta” é outra boa opção para os bíceps, pois trabalha força,
         resistência, além de estimular o aumento da massa e do volume muscular. Para alcançar esses
@@ -141,10 +129,7 @@
       </p>
 
       <h4 class="subtitle">5. Rosca direta sentado</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52303_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52303_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         A rosca direta sentado é outra opção de exercício para o bíceps que também trabalha força,
         resistência, aumento da massa e do volume muscular e deve-se usar halteres ou garrafa pet
@@ -159,10 +144,7 @@
         a 12 vezes em 3 a 4 séries, descansando de 60 a 90 segundos entre as séries.
       </p>
       <h4 class="subtitle">6. Prancha de antebraço</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52304_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52304_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Embora a prancha de antebraço seja um exercício mais focado no fortalecimento dos músculos
         do abdômen e core, também é considerado um exercício completo, ou seja que trabalha outras
@@ -182,10 +164,7 @@
         tonificar os músculos, melhorar a flexibilidade, aumentar a circulação e prevenir lesões.
       </p>
       <h4 class="subtitle">1. Esticar os braços para trás</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52305_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52305_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         O alongamento de esticar os braços para trás deve ser feito em pé para permitir alongar bem
         os bíceps, os músculos do peito e os ombros.
@@ -196,10 +175,7 @@
         importante sentir que os bíceps estão alongados, além de respeitar os limites do corpo
       </p>
       <h4 class="subtitle">2. Estender os braços</h4>
-      <img class="fotos"
-        src="../img/treino-de-biceps-em-casa_52306_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-biceps-em-casa_52306_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Esse alongamento, permite alongar os bíceps, peitoral e coluna, e deve ser feito sentado.
       </p>
@@ -210,7 +186,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
