--- a/exercicios/treino-de-costas.html
+++ b/exercicios/treino-de-costas.html
@@ -26,7 +26,7 @@
     </div>
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">Treino de costas em casa: 6 opções de exercícios</h1>
@@ -62,10 +62,7 @@
         Algumas opções de exercícios para fazer um treino de costas completo em casa são:
       </p>
       <h4 class="subtitle">1. Remada curvada</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53166.webp"
-        alt="Italian Trulli"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53166.webp" alt="Italian Trulli" />
       <p class="text1">
         A remada curvada é uma excelente opção de exercício para costas, pois trabalha os músculos
         superiores das costas, além do deltoide, trapézio e bíceps, melhorando a força e a
@@ -82,10 +79,7 @@
         séries.
       </p>
       <h4 class="subtitle">2. Crucifixo invertido inclinado</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53168_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53168_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Este exercício trabalha o fortalecimento e definição ou hipertrofia dos músculos das costas
         como o romboide, o trapézio e o redondo, além dos músculos dos ombros, peitoral e abdômen.
@@ -107,10 +101,7 @@
         séries.
       </p>
       <h4 class="subtitle">3. Elevação de braços</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53169_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53169_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         <b class="bold">Como fazer:</b> sentar em um banco ou cadeira e colocar os pesos de forma
         que o braço e o antebraço formem um ângulo de 90 graus. É importante que as palmas das mãos
@@ -118,10 +109,7 @@
         pesos até ficar com os braços esticados e retornar à posição inicial.
       </p>
       <h4 class="subtitle">4. Flexão de braço inclinada</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53170_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53170_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         A flexão de braços inclinada trabalha vários grupos musculares, incluindo as costas, os
         tríceps, o peitoral e o abdômen, o que permite fortalecer e definir os músculos das costas.
@@ -136,10 +124,7 @@
         15 repetições cada, descansando de 60 a 90 segundos entre as séries.
       </p>
       <h4 class="subtitle">5. Superman</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53172_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53172_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         O exercício do superman simula a posição do voo do super-homem e trabalha o fortalecimento
         da região lombar das costas, além dos músculos do abdômen, glúteos, quadris, posteriores da
@@ -156,10 +141,7 @@
         movimento por 1 minuto.
       </p>
       <h4 class="subtitle">6. Prancha</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53173_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53173_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Embora a prancha seja um exercício mais focado no fortalecimento dos músculos do abdômen e
         core, também é considerado um exercício completo, ou seja, que trabalha outras áreas do
@@ -179,10 +161,7 @@
       </p>
       <p class="text1">Algumas opções de alongamento incluem:</p>
       <h4 class="subtitle">1. Sentar sobre os calcanhares</h4>
-      <img class="fotos"
-        src="../img/treino-de-costas-em-casa_53174_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-costas-em-casa_53174_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Esse alongamento permite alongar os músculos das costas como trapézio, rombóide e redondo,
         além dos deltóides, peitorais e coluna, e deve ser feito sentado.
@@ -194,10 +173,7 @@
         30 a 60 segundos.
       </p>
       <h4 class="subtitle">2. Flexão lateral do tronco</h4>
-      <img class="fotos"
-        src="img/treino-de-costas-em-casa_53175_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="img/treino-de-costas-em-casa_53175_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         A flexão lateral do tronco alonga os músculos das costas, além do dorso e quadris e deve ser
         feito em pé.
@@ -210,7 +186,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
