--- a/exercicios/treino-de-gluteos.html
+++ b/exercicios/treino-de-gluteos.html
@@ -26,7 +26,7 @@
     </div>
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">9 exercícios para treino de glúteos em casa</h1>
@@ -65,8 +65,7 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de glúteos em casa são:</p>
 
       <h4 class="subtitle">1. Ponte</h4>
-      <img class="fotos"
-      src="../img/1 (1).webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/1 (1).webp" alt="Italian Trulli2" />
       <p class="text1">
         Para iniciar o treino de glúteos, um bom exercício é a ponte, pois ajuda a estabilizar o
         core trabalhando os glúteos, as costas e o abdômen, além de ser uma outra forma de
@@ -85,8 +84,7 @@
       </p>
 
       <h4 class="subtitle">2. Ponte com elevação de perna</h4>
-      <img class="fotos"
-       src="../img/1 (2).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (2).webp" alt="Italian Trulli2" />
       <p class="text1">
         A ponte com elevação de perna ajuda a fortalecer os glúteos, abdômen e lombar, além de
         melhorar a estabilidade dos quadris.
@@ -105,8 +103,7 @@
       </p>
 
       <h4 class="subtitle">3. Elevação do pé ao teto</h4>
-      <img class="fotos"
-      src="../img/1 (3).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (3).webp" alt="Italian Trulli2" />
       <p class="text1">
         A elevação do pé ao teto é uma boa opção para os glúteos, pois trabalha força e resistência.
         Além disso, ajuda a fortalecer o abdômen e as pernas.
@@ -125,8 +122,7 @@
       </p>
 
       <h4 class="subtitle">4. Elevação de perna lateral</h4>
-      <img class="fotos"
-      src="../img/1 (4).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (4).webp" alt="Italian Trulli2" />
       <p class="text1">
         A elevação de perna lateral trabalha a resistência e o fortalecimento dos glúteos, além de
         fortalecer as pernas e o abdômen.
@@ -143,8 +139,7 @@
       </p>
 
       <h4 class="subtitle">5. Agachamento clássico</h4>
-      <img class="fotos"
-       src="../img/1 (5).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (5).webp" alt="Italian Trulli2" />
       <p class="text1">
         O agachamento é um exercício completo que trabalha os glúteos, coxas, panturrilha, parte
         posterior das pernas e abdômen.
@@ -165,8 +160,7 @@
       </p>
 
       <h4 class="subtitle">6. Agachamento búlgaro</h4>
-      <img class="fotos"
-      src="../img/1 (6).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (6).webp" alt="Italian Trulli2" />
       <p class="text1">
         O agachamento búlgaro é um dos treinos mais eficientes para trabalhar os glúteos e as coxas,
         melhorando o fortalecimento e o alongamento muscular, além de melhorar a flexibilidade do
@@ -190,8 +184,7 @@
       </p>
 
       <h4 class="subtitle">7. Agachamento lateral</h4>
-      <img class="fotos"
-      src="../img/1 (7).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (7).webp" alt="Italian Trulli2" />
       <p class="text1">
         O agachamento lateral é uma outra opção para fortalecer os glúteos e as coxas, além de
         trabalhar a parte interna das pernas.
@@ -222,8 +215,7 @@
       </p>
 
       <h4 class="subtitle">1. Abraçar as pernas</h4>
-      <img class="fotos"
-      src="../img/1 (8).webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/1 (8).webp" alt="Italian Trulli2" />
       <p class="text1">
         O abraço das pernas deve ser feito deitado, permitindo alongar os músculos médio, mínimo e
         máximo dos glúteos, além dos quadris, pernas e lombar.
@@ -235,8 +227,7 @@
       </p>
 
       <h4 class="subtitle">2. Torcer as costas</h4>
-      <img class="fotos"
-      src="../img/1 (9).webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/1 (9).webp" alt="Italian Trulli2" />
       <p class="text1">
         Esse alongamento, permite alongar do glúteo máximo, além de ajudar a melhorar a
         flexibilidade dos quadris e deve ser feito sentado.
@@ -251,7 +242,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
