--- a/exercicios/treino-de-lombar.html
+++ b/exercicios/treino-de-lombar.html
@@ -25,9 +25,8 @@
       </header>
     </div>
     <div class="texto">
-
-      <a class="fa-link"href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+      <a class="fa-link" href="../index.html">
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">8 Alongamentos para Lombar e Como Fazer</h1>
@@ -56,10 +55,7 @@
       </p>
       <p class="text1">Algumas opções de alongamentos para lombar são:</p>
       <h4 class="subtitle">1. Alongamento da coxa</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_38659.webp"
-        alt="aa"
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_38659.webp" alt="aa" />
       <p class="text1">
         O alongamento da coxa permite alongar o músculo da parte de trás da coxa, além da
         panturrilha e pé, ajudando a fortalecer a musculatura da perna e reduzir a pressão sobre a
@@ -73,10 +69,7 @@
         mantendo essa posição durante cerca de 30 segundos e repetir o mesmo com a outra perna.
       </p>
       <h4 class="subtitle">2. Abraçar a perna</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_38658_l.webp"
-        alt="aa"
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_38658_l.webp" alt="aa" />
       <p class="text1">
         O abraço da perna deve ser feito deitado, permitindo alongar os músculos da lombar, além do
         glúteo e coxas, melhorando a flexibilidade e aumentando a amplitude dos movimentos.
@@ -88,10 +81,7 @@
         perna, repetindo o movimento por 2 vezes em cada perna.
       </p>
       <h4 class="subtitle">3. Postura da borboleta</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_38660_l.webp"
-        alt="aa" 
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_38660_l.webp" alt="aa" />
       <p class="text1">
         A postura da borboleta permite alongar os músculos das costas e pernas, e aliviar a tensão
         na lombar. No entanto, esse alongamento não deve ser feito caso a pessoa tenha dor intensa
@@ -106,10 +96,7 @@
         evitar afastar tanto os joelhos.
       </p>
       <h4 class="subtitle">4. Ponte</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_56244_l.webp"
-        alt="aa"
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_56244_l.webp" alt="aa" />
       <p class="text1">
         A ponte ajuda a estabilizar e fortalecer os músculos do core que sustentam e estabilizam a
         coluna, trabalhando a lombar, os glúteos, o quadril e o abdômen.
@@ -123,10 +110,7 @@
         vezes.
       </p>
       <h4 class="subtitle">5. Posição da serpente</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_56245_l.webp"
-        alt="aa"
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_56245_l.webp" alt="aa" />
       <p class="text1">
         A posição da serpente permite alongar e fortalecer os músculos da parte inferior das costas,
         ajudando a prevenir a dor na lombar.
@@ -141,10 +125,7 @@
       </p>
 
       <h4 class="subtitle">6. Superman</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_56246_l.webp"
-        alt="aa" 
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_56246_l.webp" alt="aa" />
       <p class="text1">
         O exercício do superman simula a posição do voo do super-homem e trabalha o fortalecimento
         da região lombar, além dos músculos do abdômen, glúteos, quadris, posteriores da coxa e
@@ -160,10 +141,7 @@
         por 2 a 5 segundos e voltar à posição inicial. Repetir esse movimento por 1 minuto.
       </p>
       <h4 class="subtitle">7. Postura do gato</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_56247_l.webp"
-        alt="aa"
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_56247_l.webp" alt="aa" />
       <p class="text1">
         A postura do gato permite alongar os músculos das costas, quadris, abdômen e tórax,
         melhorando a flexibilidade da coluna lombar, além do pescoço e ombros.
@@ -177,10 +155,7 @@
         repetir o movimento por 2 a 4 vezes.
       </p>
       <h4 class="subtitle">8. Rotação dos quadris</h4>
-      <img class="fotos"
-        src="../img/alongamentos-para-lombar_56248_l.webp"
-        alt="aa" 
-      />
+      <img class="fotos" src="../img/alongamentos-para-lombar_56248_l.webp" alt="aa" />
       <p class="text1">
         A rotação dos quadris permite melhorar a flexibilidade da coluna e quadris, reduzir a
         rigidez e dando mais estabilidade para o corpo.
@@ -194,7 +169,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
