--- a/exercicios/treino-de-ombros.html
+++ b/exercicios/treino-de-ombros.html
@@ -27,7 +27,7 @@
 
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">7 Exercícios para Treino de Ombro em Casa</h1>
@@ -65,8 +65,7 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de glúteos em casa são:</p>
 
       <h4 class="subtitle">1. Flexão com pés elevados</h4>
-      <img class="fotos"
-      src="../img/1.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/1.webp" alt="Italian Trulli2" />
       <p class="text1">
         A flexão com os pés elevados é um exercício que ajuda a trabalhar a força e a resistência
         dos deltoides, tríceps e bíceps. Para realizar esse exercício, deve-se usar uma superfície
@@ -81,8 +80,7 @@
       </p>
 
       <h4 class="subtitle">2. Elevação lateral</h4>
-      <img class="fotos"
-      src="../img/2.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/2.webp" alt="Italian Trulli2" />
       <p class="text1">
         A elevação lateral trabalha a força e a resistência dos músculos deltoide, trapézio e
         infra-espinhal. Esse exercício deve ser feito com o uso de peso como garrafa pet com água ou
@@ -96,8 +94,7 @@
       </p>
 
       <h4 class="subtitle">3. Elevação frontal</h4>
-      <img class="fotos"
-      src="../img/3.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/3.webp" alt="Italian Trulli2" />
       <p class="text1">
         A elevação frontal é outra boa opção de exercício para trabalhar a força e a resistência dos
         músculos deltoide e trapézio, além de estimular o aumento da massa e do volume muscular.
@@ -113,8 +110,7 @@
       </p>
 
       <h4 class="subtitle">4. Prancha com elevação de braço</h4>
-      <img class="fotos"
-      src="../img/4.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/4.webp" alt="Italian Trulli2" />
       <p class="text1">
         A prancha com elevação de braço é considerada um exercício completo, pois trabalha a força e
         a estabilidade dos deltoides, abdômen, core e outros músculos do corpo como os bíceps e
@@ -133,8 +129,7 @@
       </p>
 
       <h4 class="subtitle">5. Desenvolvimento</h4>
-      <img class="fotos"
-      src="../img/5.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/5.webp" alt="Italian Trulli2" />
       <p class="text1">
         O exercício de desenvolvimento dos ombros permite fortalecer e desenvolver os músculos
         deltoides anterior e lateral, além de trabalhar os tríceps, o trapézio e o peitoral
@@ -151,8 +146,7 @@
       </p>
 
       <h4 class="subtitle">6. Remada alta</h4>
-      <img class="fotos"
-      src="../img/6.webp" alt="Italian Trulli2" />
+      <img class="fotos" src="../img/6.webp" alt="Italian Trulli2" />
       <p class="text1">
         A remada alta é um exercício que trabalha a força, sustentação e equilíbrio dos músculos
         deltoide e trapézio, além do peitoral superior, e deve ser feito com uso de peso como
@@ -174,8 +168,7 @@
       </p>
 
       <h4 class="subtitle">1. Alongamento sobre a cabeça</h4>
-      <img class="fotos"
-      src="../img/7.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/7.webp" alt="Italian Trulli2" />
       <p class="text1">
         Esse alongamento, permite alongar os deltoides, trapézio, peitoral e coluna, e deve ser
         feito em pé ou sentado.
@@ -188,8 +181,7 @@
       </p>
 
       <h4 class="subtitle">2. Alongamento de braços cruzados</h4>
-      <img class="fotos"
-      src="../img/8.webp" alt="Italian Trulli2"/>
+      <img class="fotos" src="../img/8.webp" alt="Italian Trulli2" />
       <p class="text1">
         O alongamento de braços cruzados permite alongar os músculos do ombro e do bíceps.
       </p>
@@ -201,7 +193,7 @@
         esquerdo. Pode-se fazer 3 a 4 repetições para cada braço.
       </p>
 
-      <footer class="container-footer">
+      <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
         <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
       </footer>
     </div>
