--- a/exercicios/treino-de-peito.html
+++ b/exercicios/treino-de-peito.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="texto">
-      <a class="fa-link"href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+      <a class="fa-link" href="../index.html">
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
       <h1 class="title1">Como Fazer Treino de Peito em Casa</h1>
 
@@ -60,10 +60,7 @@
       </p>
 
       <h4 class="subtitle">1. Flexão normal (20x)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52216.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52216.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para iniciar o treino de glúteos, um bom exercício é a ponte, pois ajuda a estabilizar o
         core trabalhando os glúteos, as costas e o abdômen, além de ser uma outra forma de
@@ -84,17 +81,14 @@
       </p>
 
       <h4 class="subtitle">2. Flexão isométrica (15 seg)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52217_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52217_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         A flexão isométrica é uma variação da flexão normal que permite aumentar o tempo sob tensão
         do músculo peitoral, o que favorece o crescimento muscular.
       </p>
       <p class="text1">
-        <b class="bold">Como fazer:</b> deve-se realizar uma flexão normal, mas, após descer o
-        peito até ao chão com os cotovelos num ângulo de 90º, deve-se segurar essa posição por 15
+        <b class="bold">Como fazer:</b> deve-se realizar uma flexão normal, mas, após descer o peito
+        até ao chão com os cotovelos num ângulo de 90º, deve-se segurar essa posição por 15
         segundos. Durante todo o tempo é também importante manter o abdominal bem contraído, para
         garantir que se mantém uma linha reta desde os pés até à cabeça.
       </p>
@@ -104,10 +98,7 @@
       </p>
 
       <h4 class="subtitle">3. Flexão isolada (10x cada lado)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52218_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52218_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Este tipo de flexões isolar o trabalho muscular em cada lado do peitoral, fazendo com que a
         tensão sobre o músculo seja maior, favorecendo a hipertrofia.
@@ -125,10 +116,7 @@
       </p>
 
       <h4 class="subtitle">4. Flexão declinada (20x)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52219_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52219_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         As flexões são um exercício bastante completo para treinar o músculo peitoral, no entanto,
         fazer pequenas variações no ângulo em que são realizadas pode ajudar a focar um pouco mais
@@ -147,10 +135,7 @@
       </p>
 
       <h4 class="subtitle">5. Flexão inclinada (15x)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52220_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52220_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Após trabalhar mais a região superior do peitoral, as flexões inclinadas vão ajudar a focar
         um pouco mais na parte inferior do músculo peitoral.
@@ -168,10 +153,7 @@
       </p>
 
       <h4 class="subtitle">6. Flexão explosiva (10x)</h4>
-      <img class="fotos"
-        src="../img/treino-de-peito-em-casa_52221_l.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-peito-em-casa_52221_l.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para finalizar a série de treino e garantir a fadiga muscular, a flexão explosiva é um
         excelente exercício, que ativa todo o músculo peitoral e utiliza toda a força de contração.
@@ -194,7 +176,7 @@
       </p>
     </div>
 
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
