--- a/exercicios/treino-de-triceps.html
+++ b/exercicios/treino-de-triceps.html
@@ -26,7 +26,7 @@
     </div>
     <div class="texto">
       <a href="../index.html">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
       </a>
 
       <h1 class="title1">7 Exercícios para Treino de Tríceps em Casa</h1>
@@ -60,10 +60,7 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de tríceps em casa são:</p>
 
       <h4 class="subtitle">1. Tríceps no banco</h4>
-      <img class="fotos"
-        src="../img/treino-de-triceps-em-casa_52404.webp"
-        alt="Italian Trulli2"
-      />
+      <img class="fotos" src="../img/treino-de-triceps-em-casa_52404.webp" alt="Italian Trulli2" />
       <p class="text1">
         O tríceps no banco ajuda a trabalhar a força e a resistência dos tríceps, além dos músculos
         dos ombros, das costas e do core, o que ajuda a fortalecer esses músculos e a melhorar o
@@ -81,7 +78,8 @@
       </p>
 
       <h4 class="subtitle">2. Extensão de tríceps em pé</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52405_l.webp"
         alt="Italian Trulli2"
       />
@@ -106,7 +104,8 @@
       </p>
 
       <h4 class="subtitle">3. Extensão de tríceps deitado</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52406_l.webp"
         alt="Italian Trulli2"
       />
@@ -125,7 +124,8 @@
       </p>
 
       <h4 class="subtitle">4. Tríceps coice</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52407_l.webp"
         alt="Italian Trulli2"
       />
@@ -141,7 +141,8 @@
       </p>
 
       <h4 class="subtitle">5. Elevação lateral dos braços</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52408_l.webp"
         alt="Italian Trulli2"
       />
@@ -161,7 +162,8 @@
       </p>
 
       <h4 class="subtitle">6.Flexão de braço inclinada</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52409_l.webp"
         alt="Italian Trulli2"
       />
@@ -180,7 +182,8 @@
       </p>
 
       <h4 class="subtitle">7. Agachamento lateral</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52410_l.webp"
         alt="Italian Trulli2"
       />
@@ -204,7 +207,8 @@
       </p>
 
       <h4 class="subtitle">1. Alongamento horizontal</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52411_l.webp"
         alt="Italian Trulli2"
       />
@@ -221,7 +225,8 @@
       </p>
 
       <h4 class="subtitle">2. Alongamento sobre a cabeça</h4>
-      <img class="fotos"
+      <img
+        class="fotos"
         src="../img/treino-de-triceps-em-casa_52412_l.webp"
         alt="Italian Trulli2"
       />
@@ -236,7 +241,7 @@
         Esse exercício não é feito em séries.
       </p>
     </div>
-    <footer class="container-footer">
+    <footer class="container-footer" style="font-family: 'Roboto', sans-serif">
       <div>&copy Equipe <span>NutriIMC</span> Uninassau.</div>
     </footer>
 
